[gd_scene load_steps=5 format=3 uid="uid://dhlxlkhnphwkt"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_7sg3g"]
[ext_resource type="Texture2D" uid="uid://ca30xuwf3y1kx" path="res://assets/racecar/racecar_red.png" id="2_qego7"]
[ext_resource type="Texture2D" uid="uid://ce5tr55yq3rad" path="res://assets/racecar/front_wheel.png" id="2_vt48y"]
[ext_resource type="Texture2D" uid="uid://w8fnbiok0hfh" path="res://assets/racecar/racecar_blue.png" id="3_tt5yy"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 3
motion_mode = 1
script = ExtResource("1_7sg3g")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(323, 116, 323, 18, 340, 17, 350, 7, 350, -7, 340, -17, 323, -18, 323, -117, 318, -117, 314, -121, 246, -121, 243, -119, 243, -104, 258, -97, 258, -89, 285, -33, 285, -20, 262, -21, 251, -23, 251, -36, 247, -38, 222, -38, 218, -35, 218, -24, 195, -26, 194, -51, 190, -55, 190, -68, 214, -68, 228, -81, 227, -110, 222, -117, 214, -122, 139, -122, 131, -117, 126, -108, 126, -82, 132, -72, 139, -68, 165, -68, 138, -30, 123, -30, 122, -32, 100, -41, 98, -41, 97, -32, 87, -32, 66, -42, 58, -43, 58, -58, 51, -64, 51, -66, 60, -81, 60, -95, 57, -97, 40, -97, 5, -96, -4, -97, -38, -109, -194, -109, -200, -118, -211, -124, -286, -124, -295, -118, -300, -108, -300, -84, -298, -78, -294, -73, -349, -69, -349, -63, -328, -63, -326, 0, -328, 63, -349, 63, -349, 69, -294, 73, -298, 78, -301, 85, -300, 108, -295, 118, -286, 124, -211, 123, -200, 118, -195, 109, -38, 109, -19, 104, -5, 98, 4, 97, 57, 97, 59, 94, 59, 80, 55, 70, 51, 66, 51, 64, 58, 57, 57, 43, 75, 39, 87, 32, 98, 32, 98, 41, 101, 41, 101, 39, 119, 34, 123, 30, 138, 30, 165, 68, 139, 68, 130, 74, 125, 82, 126, 109, 132, 118, 139, 122, 214, 122, 223, 116, 227, 109, 227, 80, 221, 72, 214, 68, 189, 68, 190, 54, 194, 50, 194, 25, 219, 24, 219, 35, 222, 38, 248, 38, 251, 35, 251, 23, 262, 21, 285, 21, 285, 33, 277, 41, 272, 53, 268, 73, 258, 89, 258, 98, 243, 104, 243, 108, 245, 111, 243, 113, 243, 119, 248, 121, 315, 121, 319, 117)

[node name="Sprites" type="Node2D" parent="."]

[node name="Wheels" type="Node2D" parent="Sprites"]

[node name="FrontRight" type="Sprite2D" parent="Sprites/Wheels"]
position = Vector2(176, 95)
texture = ExtResource("2_vt48y")

[node name="FrontLeft" type="Sprite2D" parent="Sprites/Wheels"]
position = Vector2(177, -95)
texture = ExtResource("2_vt48y")

[node name="Frames" type="Node2D" parent="Sprites"]

[node name="Red" type="Sprite2D" parent="Sprites/Frames"]
visible = false
texture = ExtResource("2_qego7")

[node name="Blue" type="Sprite2D" parent="Sprites/Frames"]
visible = false
texture = ExtResource("3_tt5yy")

[node name="Markers" type="Node2D" parent="."]

[node name="BackWheel" type="Marker2D" parent="Markers"]
position = Vector2(-226, 0)

[node name="FrontWheel" type="Marker2D" parent="Markers"]
position = Vector2(193, 0)
